k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biblioteca
  labels:
    app.kubernetes.io/part-of: biblioteca-u
